--- a/css/brands.css
+++ b/css/brands.css
@@ -11,5 +11,5 @@
     margin-top: 50px;
     display: grid;
     gap: 40px;
-    grid-template-columns: repeat(auto-fit, minmax(calc(440px - 40px), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(calc(440px - 40px), 1fr));
 }
