--- a/css/category.css
+++ b/css/category.css
@@ -99,6 +99,7 @@
     font-size: 16px;
     line-height: 1.5;
     font-weight: 500;
+    color: var(--main-blue);
 }
 
 .filter-item__header::after {
@@ -134,6 +135,7 @@
     align-items: center;
     cursor: pointer;
     padding-left: 26px;
+    font-size: 16px;
 }
 
 .filter-item__label span.filter-count {
@@ -454,9 +456,9 @@
 }
 
 .itc-select:not(#order-select):not(#order-select-entity) button {
-    border: 1px solid var(--main-blue);
-    background-color: transparent;
-    border-radius: 5px;
+    border: none;
+    background-color: #fff;
+    border-radius: 10px;
     padding: 10px;
     cursor: pointer;
     font-style: normal;
@@ -491,6 +493,16 @@
     right: 20px;
     transform: translateY(-50%);
     cursor: pointer;
+}
+
+.itc-select-box {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.itc-select-box p {
+    font-weight: 500;
 }
 
 .swap-display-buttons {
@@ -660,6 +672,7 @@ ul.products-pagination {
     padding: 10px;
     font-size: 12px;
     position: relative;
+    box-shadow: 0px 4px 4px 0 rgba(5, 43, 52, .25);
 }
 
 .label .label-hint a {
@@ -903,6 +916,60 @@ ul.products-pagination {
     font-size: 16px;
     line-height: 1.5;
     border-radius: 5px;
+}
+
+.about-text {
+    position: relative;
+    margin-top: 25px;
+    background: #fff;
+    border-radius: 10px;
+    padding: 15px 15px 0 15px;
+    font-size: 16px;
+}
+
+.about-text__inner {
+    max-height: 3em;
+    overflow: hidden;
+}
+
+.about-text__inner.active {
+    max-height: none;
+    overflow: visible;
+}
+
+.about-text__inner.active ~ .about-text__button {
+    box-shadow: none;
+}
+
+.about-text__inner.active ~ .about-text__button svg {
+    transform: rotate(180deg);
+}
+
+.about-text__button {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    box-shadow: 0px -10px 8px 10px rgba(255, 255, 255, 0.8);
+}
+
+.comments {
+    margin-top: 50px;
+}
+
+.seo-tags {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px 0;
+    margin-top: 50px;
+}
+
+.seo-tags {
+    font-size: 16px;
+}
+
+.seo-tags .col-md-3 {
+    flex-basis: 25%;
 }
 
 /* FEEDBACK BANNER END */
