--- a/css/contacts.css
+++ b/css/contacts.css
@@ -142,7 +142,7 @@
 }
 
 .contacts-city__departments {
-    background-color: var(--filter-bg-color);
+    background-color: #fff;
     margin-top: 100px;
     padding: 45px 145px;
     border-radius: 10px;
@@ -311,7 +311,7 @@
 }
 
 .contacts-social__right {
-    background-color: var(--filter-bg-color);
+    background-color: #fff;
     padding: 30px 35px;
     border-radius: 10px;
     width: 100%;
