--- a/css/media.css
+++ b/css/media.css
@@ -127,6 +127,12 @@
     main.about .info {
         padding-bottom: 20px;
     }
+
+    .categories-with-img-button-prev,
+    .categories-with-img-button-next {
+        width: 30px;
+        height: 30px;
+    }
 }
 
 @media (max-width: 1400px) {
@@ -229,6 +235,20 @@
     .product-card.row .product-card__buy-click,
     .product-card.row .product-card__buy-cart {
         padding: 15px 20px;
+    }
+
+    .benefits__inner {
+        flex-wrap: wrap;
+        gap: 45px 0;
+    }
+
+    .benefits__item {
+        flex-basis: auto;
+        width: 50%;
+        justify-content: center;
+    }
+    section.popular {
+        padding-top: 30px;
     }
 }
 
@@ -1765,6 +1785,10 @@
     #bx-soa-total {
         max-width: none;
     }
+
+    .main-title {
+        padding-top: 95px;
+    }
 }
 
 @media (max-width: 820px) {
@@ -1877,7 +1901,8 @@
 }
 
 @media (max-width: 768px) {
-    .title h2 {
+    .title h2,
+    .title h1 {
         font-size: 36px;
     }
 
@@ -2365,6 +2390,18 @@
         justify-content: space-between;
         gap: 5px;
     }
+
+    .benefits__inner {
+        flex-direction: column;
+    }
+
+    .benefits__item {
+        width: 100%;
+        justify-content: flex-start;
+    }
+    .benefits__item p {
+        max-width: none;
+    }
 }
 
 @media (max-width: 620px) {
@@ -2510,7 +2547,8 @@
 }
 
 @media (max-width: 576px) {
-    .title h2 {
+    .title h2,
+    .title h1 {
         font-size: 26px;
     }
 
@@ -2988,6 +3026,12 @@
     .profiles__header, 
     .order__header {
         padding: 10px;
+    }
+    .main-title {
+        padding-top: 0;
+    }
+    .benefits__item p {
+        font-size: 14px;
     }
 }
 
@@ -3724,6 +3768,33 @@
     .profiles__title {
         font-size: 10px;
     }
+    .page-banner {
+        background: none !important;
+    }
+    .title h2 {
+        color: var(--main-blue);
+    }
+    .tags__item-category {
+        padding: 5px;
+    }
+    .tags__inner {
+        max-height: 30px;
+    }
+    .tags__button::after {
+        top: 0.75em;
+    }
+    .tags__button {
+        font-size: 14px;
+    }
+    .itc-select-box p {
+        display: none;
+    }
+    .about-text__inner {
+        font-size: 12px;
+    }
+    .seo-tags {
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 400px) {
@@ -3735,7 +3806,8 @@
         padding: 15px 0;
     }
 
-    .title h2 {
+    .title h2,
+    .title h1 {
         font-size: 20px;
     }
 
@@ -4125,6 +4197,9 @@
 @media (min-width: 992px) {
 
     /* HOVER START */
+    .catalog-popup__menu-item:hover a {
+        color: var(--hover-blue);
+    }
     a:hover {
         color: var(--hover-blue);
     }
