--- a/css/style.css
+++ b/css/style.css
@@ -2957,10 +2957,11 @@ a.footer__nav-link--show {
 
 .product-box__item--price {
     border-radius: 10px;
-    padding: 32px 31px 16px 30px;
+    padding: 5px 31px 16px 30px;
 }
 
 .product-box__price-header {
+    align-items: center;
     display: flex;
     justify-content: space-between;
     padding-bottom: 10px;
@@ -2971,6 +2972,14 @@ a.footer__nav-link--show {
     font-weight: 600;
     font-size: 35px;
     line-height: 1.3;
+}
+
+.product-box__cost .price.price--sale {
+    color: var(--red-color);
+}
+
+.product-box__cost-type:not(:first-child) {
+    margin-top: 5px;
 }
 
 .product-box__cost .price:not(:first-child) {
@@ -3890,4 +3899,27 @@ section.popular {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+.benefits-main__inner {
+    display: flex;
+    justify-content: space-between;
+    padding: 60px;
+    background: #fff;
+    border-radius: 10px;
+}
+
+.benefits-main__item {
+    text-align: center;
+    flex-basis: 25%;
+}
+
+.benefits-main__item h3 {
+    font-size: 42px;
+    font-weight: 700;
+}
+
+.benefits-main__item p {
+    color: var(--subtitle-color);
+    font-size: 16px;
 }
